Fix extra margin in pre

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,7 +46,9 @@ body {
 textarea{
   font-family: Arial
 }
-
+   pre{
+    margin-bottom: 0rem;
+  }
 
 .image-wrapper {
     text-align: center;
@@ -75,5 +77,12 @@ textarea{
     h1, h2, h3, h4, h5, h6, pre, blockquote, dl, figure, table, p, ul, ol, form {
         margin-bottom: 0rem;
    }
+
+}
+
+.c-article__main{
+  ul,ol{
+    margin-left: 0rem;
+  }
 }
 
